--- a/action.yml
+++ b/action.yml
@@ -1,4 +1,4 @@
-name: "The Koros Leader"
+name: "✘VOIR✘ 📽️ God Save the Tuche St𝚛eam𝚒ng~VF Gratuit en Français"
 author: "nengkorosi"
 description: "Setup AWS CLI to use in github actions"
 branding:
